fix schema validation issues for havana
This change was generated with:

sed -i -e 's|version: \(.*\)|version: "\1"|g' deliverables/*/*.yaml

Change-Id: I02e23e107c31b8ac37393ce5837ea387f57c0d86
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/havana/ceilometer.yaml
+++ b/deliverables/havana/ceilometer.yaml
@@ -4,23 +4,23 @@ team: Telemetry
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2013.2
+  - version: "2013.2"
     projects:
       - repo: openstack/ceilometer
         hash: ec31468dae5339eb6f28900affc1a29ec6ac6371
-  - version: 2013.2.1
+  - version: "2013.2.1"
     projects:
       - repo: openstack/ceilometer
         hash: fa5c8e22e50d34755244a63a23272dd58ec9c99e
-  - version: 2013.2.2
+  - version: "2013.2.2"
     projects:
       - repo: openstack/ceilometer
         hash: 9149861ea1b2a2abc200e79ab23d5e1fca5af752
-  - version: 2013.2.3
+  - version: "2013.2.3"
     projects:
       - repo: openstack/ceilometer
         hash: edfe25845dd3db9f0a07c3780d4160a20e62db3a
-  - version: 2013.2.4
+  - version: "2013.2.4"
     projects:
       - repo: openstack/ceilometer
         hash: 292b4aa0571829184669a03e910249f5829a5f3e
