--- a/deliverables/havana/cinder.yaml
+++ b/deliverables/havana/cinder.yaml
@@ -4,23 +4,23 @@ team: cinder
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2013.2
+  - version: "2013.2"
     projects:
       - repo: openstack/cinder
         hash: bdb5d982d069ac6464c8ef857a0f95dde02005de
-  - version: 2013.2.1
+  - version: "2013.2.1"
     projects:
       - repo: openstack/cinder
         hash: eb78fee5b2f3e9ecf30fa69175000fbe1cc8c1d1
-  - version: 2013.2.2
+  - version: "2013.2.2"
     projects:
       - repo: openstack/cinder
         hash: f9e1943174dd2dcbf7a64873a3038678d1a3fd69
-  - version: 2013.2.3
+  - version: "2013.2.3"
     projects:
       - repo: openstack/cinder
         hash: c5cdf8261d9f7fb42ca59a12554d1c0ed9cb0a7e
-  - version: 2013.2.4
+  - version: "2013.2.4"
     projects:
       - repo: openstack/cinder
         hash: 4e7f510235a79cf04a8a6ef5455d17267ea058d3
