--- a/deliverables/havana/horizon.yaml
+++ b/deliverables/havana/horizon.yaml
@@ -4,23 +4,23 @@ team: horizon
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2013.2
+  - version: "2013.2"
     projects:
       - repo: openstack/horizon
         hash: d3e8e29f1e252e7bffc836056b52c8e4e5a0307c
-  - version: 2013.2.1
+  - version: "2013.2.1"
     projects:
       - repo: openstack/horizon
         hash: 9668e80f0c902c8064b7021cd0e75c33dda5916c
-  - version: 2013.2.2
+  - version: "2013.2.2"
     projects:
       - repo: openstack/horizon
         hash: 36e0ab56136a2063ce56e7579d13393637ea0e21
-  - version: 2013.2.3
+  - version: "2013.2.3"
     projects:
       - repo: openstack/horizon
         hash: 3d04c3c6ac5fd4801215edb6c5241c7e151515df
-  - version: 2013.2.4
+  - version: "2013.2.4"
     projects:
       - repo: openstack/horizon
         hash: c3014a85dd758b6720749929e262549214be0217
