--- a/deliverables/havana/keystone.yaml
+++ b/deliverables/havana/keystone.yaml
@@ -4,23 +4,23 @@ team: keystone
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2013.2
+  - version: "2013.2"
     projects:
       - repo: openstack/keystone
         hash: 1a0297e1f5d1049c9e2dd362f478112cd6691980
-  - version: 2013.2.1
+  - version: "2013.2.1"
     projects:
       - repo: openstack/keystone
         hash: 03ed8c378bf2cbf85f344eceac6db94e42d74330
-  - version: 2013.2.2
+  - version: "2013.2.2"
     projects:
       - repo: openstack/keystone
         hash: c22f2edeb7af8c4c8256bbadbe75b453fa09dc93
-  - version: 2013.2.3
+  - version: "2013.2.3"
     projects:
       - repo: openstack/keystone
         hash: a96d1a44bc0f074729c312e5c2a0f0875edf1765
-  - version: 2013.2.4
+  - version: "2013.2.4"
     projects:
       - repo: openstack/keystone
         hash: 022021b0fa0ca0d7c88bd7f86dda69c890d52320
