--- a/deliverables/havana/python-cliff.yaml
+++ b/deliverables/havana/python-cliff.yaml
@@ -2,27 +2,27 @@
 launchpad: python-cliff
 team: OpenStackClient
 releases:
-  - version: 1.3.3
+  - version: "1.3.3"
     projects:
       - repo: openstack/cliff
         hash: 58a24ee882979f0d2a092460f8607907ad34b116
-  - version: 1.4
+  - version: "1.4"
     projects:
       - repo: openstack/cliff
         hash: 5b695fecfac9dcccb14ababb76090f39cbb9f901
-  - version: 1.4.1
+  - version: "1.4.1"
     projects:
       - repo: openstack/cliff
         hash: f46c867f3b700fe51b82b00c0cad44722480f0bf
-  - version: 1.4.2
+  - version: "1.4.2"
     projects:
       - repo: openstack/cliff
         hash: 269f06ff6f07060f57b91c8e189d7c87740ac1ed
-  - version: 1.4.3
+  - version: "1.4.3"
     projects:
       - repo: openstack/cliff
         hash: 9eaa0e56982f45fbc44dd9fac2363e6e890db6e1
-  - version: 1.4.4
+  - version: "1.4.4"
     projects:
       - repo: openstack/cliff
         hash: ff3ac6435ba27a29cdc015d0d7df45c245a7a5e2
