--- a/deliverables/havana/python-keystoneclient.yaml
+++ b/deliverables/havana/python-keystoneclient.yaml
@@ -4,31 +4,31 @@ team: keystone
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 0.2.4
+  - version: "0.2.4"
     projects:
       - repo: openstack/python-keystoneclient
         hash: 111e7304f5bc9e7a2c726084038b5f8692ec940a
-  - version: 0.2.5
+  - version: "0.2.5"
     projects:
       - repo: openstack/python-keystoneclient
         hash: 4b90bc5c314fa52ece212451fbfec7ba7eced3b1
-  - version: 0.3.0
+  - version: "0.3.0"
     projects:
       - repo: openstack/python-keystoneclient
         hash: 3056f33a1de4967e853dd49df3a89b6d4a200dea
-  - version: 0.3.1
+  - version: "0.3.1"
     projects:
       - repo: openstack/python-keystoneclient
         hash: 9ee038fc65a439d16d949e56efa65b147b9b8923
-  - version: 0.3.2
+  - version: "0.3.2"
     projects:
       - repo: openstack/python-keystoneclient
         hash: 6441f2bf0c23c038c18cf8e250a39dd3f2b3f86e
-  - version: 0.4.0
+  - version: "0.4.0"
     projects:
       - repo: openstack/python-keystoneclient
         hash: 4ae816bbfff7eb3d3bbe63f4e47e40dcb0b9c031
-  - version: 0.4.1
+  - version: "0.4.1"
     projects:
       - repo: openstack/python-keystoneclient
         hash: 0774d5aafade9e5a5de3830de461843c4a7d59a1
