--- a/deliverables/havana/python-neutronclient.yaml
+++ b/deliverables/havana/python-neutronclient.yaml
@@ -4,43 +4,43 @@ team: neutron
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 2.2.2
+  - version: "2.2.2"
     projects:
       - repo: openstack/python-neutronclient
         hash: 12bc22b07aa3d5c5a966e44f53836dbf449e63dd
-  - version: 2.2.3
+  - version: "2.2.3"
     projects:
       - repo: openstack/python-neutronclient
         hash: 8ed38707b12ae6e77480ae8d8542712d63b7fc70
-  - version: 2.2.4
+  - version: "2.2.4"
     projects:
       - repo: openstack/python-neutronclient
         hash: 93ac15bfeb51ee6a097d878e4eeef69cd2b3a6bc
-  - version: 2.2.4.1
+  - version: "2.2.4.1"
     projects:
       - repo: openstack/python-neutronclient
         hash: cbb83121c09f95b00720f494ab5f424612ac207d
-  - version: 2.2.4.2
+  - version: "2.2.4.2"
     projects:
       - repo: openstack/python-neutronclient
         hash: a4cc81bce47f5ce8c03c1b4dca5b00d638327585
-  - version: 2.2.4.3
+  - version: "2.2.4.3"
     projects:
       - repo: openstack/python-neutronclient
         hash: c3608eec8e86ac1b2c19f9aa51d0246d507b39bf
-  - version: 2.2.5
+  - version: "2.2.5"
     projects:
       - repo: openstack/python-neutronclient
         hash: ce46ca4d76994dd9cc29db2c5b4944ba907d60b0
-  - version: 2.2.6
+  - version: "2.2.6"
     projects:
       - repo: openstack/python-neutronclient
         hash: 5a382451b82a4c7fccbd6f5c4f6f270a561704b3
-  - version: 2.3.0
+  - version: "2.3.0"
     projects:
       - repo: openstack/python-neutronclient
         hash: b1f348a37787ead06e48e79ac95f885830731b2f
-  - version: 2.3.1
+  - version: "2.3.1"
     projects:
       - repo: openstack/python-neutronclient
         hash: 030da0eefb3ad1e7d925ceebcaa1705db43d0bec
