--- a/deliverables/havana/python-openstackclient.yaml
+++ b/deliverables/havana/python-openstackclient.yaml
@@ -4,15 +4,15 @@ team: OpenStackClient
 type: other
 release-model: cycle-with-intermediary
 releases:
-  - version: 0.2.0
+  - version: "0.2.0"
     projects:
       - repo: openstack/python-openstackclient
         hash: af874890221b145a8cb423d3c1fc5dc133dbef13
-  - version: 0.2.1
+  - version: "0.2.1"
     projects:
       - repo: openstack/python-openstackclient
         hash: 0507e9cf6f435ed6a2d4cbe80e3bd90472e5f57e
-  - version: 0.2.2
+  - version: "0.2.2"
     projects:
       - repo: openstack/python-openstackclient
         hash: 74f4e3138996e258d4bdce1a162a5dade62a0c15
