fix schema validation issues austin-grizzly
This change was generated with:

sed -i -e 's|version: \(.*\)|version: "\1"|g' deliverables/*/*.yaml

Change-Id: I572fb04a0531d8092b311de0c177403a7448370f
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/austin/nova.yaml
+++ b/deliverables/austin/nova.yaml
@@ -4,7 +4,7 @@ team: nova
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2010.1
+  - version: "2010.1"
     projects:
       - repo: openstack/nova
         hash: 685e2a1b4b359c1f7e8ec72817c2c420f2b26a18
