--- a/deliverables/bexar/nova.yaml
+++ b/deliverables/bexar/nova.yaml
@@ -4,7 +4,7 @@ team: nova
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2011.1
+  - version: "2011.1"
     projects:
       - repo: openstack/nova
         hash: 75e052e2c0bb7f470b959ea1a6168a6c5cddd8fd
