--- a/deliverables/cactus/glance.yaml
+++ b/deliverables/cactus/glance.yaml
@@ -4,7 +4,7 @@ team: glance
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2011.2
+  - version: "2011.2"
     projects:
       - repo: openstack/glance
         hash: 1975f1693380bae370245fbbf1eb6dbd409dcc72
