--- a/deliverables/cactus/nova.yaml
+++ b/deliverables/cactus/nova.yaml
@@ -4,7 +4,7 @@ team: nova
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2011.2
+  - version: "2011.2"
     projects:
       - repo: openstack/nova
         hash: 8d304410250ddb33d2b2140456096816e0d62410
