--- a/deliverables/diablo/nova.yaml
+++ b/deliverables/diablo/nova.yaml
@@ -4,11 +4,11 @@ team: nova
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2011.3
+  - version: "2011.3"
     projects:
       - repo: openstack/nova
         hash: a8e8d26393ac379f28db20a639d1711551106897
-  - version: 2011.3.1
+  - version: "2011.3.1"
     projects:
       - repo: openstack/nova
         hash: 2210b0796bf0b905ee5956a0b526b07eaae86709
