--- a/deliverables/diablo/python-novaclient.yaml
+++ b/deliverables/diablo/python-novaclient.yaml
@@ -4,7 +4,7 @@ team: nova
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 2.6.0
+  - version: "2.6.0"
     projects:
       - repo: openstack/python-novaclient
         hash: d81b0d84c1aef8955c45a5117239baba1058dc85
