--- a/deliverables/essex/python-novaclient.yaml
+++ b/deliverables/essex/python-novaclient.yaml
@@ -4,7 +4,7 @@ team: nova
 type: library
 release-model: cycle-with-milestones
 releases:
-  - version: 2012.1
+  - version: "2012.1"
     projects:
       - repo: openstack/python-novaclient
         hash: 45fb6b6de89eaec642ecbf755af45fd55f8224d4
