--- a/deliverables/folsom/cinder.yaml
+++ b/deliverables/folsom/cinder.yaml
@@ -4,19 +4,19 @@ team: cinder
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2012.2
+  - version: "2012.2"
     projects:
       - repo: openstack/cinder
         hash: 8bcfae7e2261812854cbd34ecfee960e109ac956
-  - version: 2012.2.1
+  - version: "2012.2.1"
     projects:
       - repo: openstack/cinder
         hash: 07e947e3bea12d90f303bb953346fff68950d638
-  - version: 2012.2.3
+  - version: "2012.2.3"
     projects:
       - repo: openstack/cinder
         hash: a52ca0c0a03b3c15847445d8e4e9b52e9dab46c1
-  - version: 2012.2.4
+  - version: "2012.2.4"
     projects:
       - repo: openstack/cinder
         hash: 4cde3ad6ecc094602bc884052afcde08243e55cd
