--- a/deliverables/folsom/glance.yaml
+++ b/deliverables/folsom/glance.yaml
@@ -4,19 +4,19 @@ team: glance
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2012.2
+  - version: "2012.2"
     projects:
       - repo: openstack/glance
         hash: a9f0a4c4dbac0c92c431150161915bd5459a42d0
-  - version: 2012.2.1
+  - version: "2012.2.1"
     projects:
       - repo: openstack/glance
         hash: a4062940b804f524ada38df3c62c14b9c98f82bc
-  - version: 2012.2.3
+  - version: "2012.2.3"
     projects:
       - repo: openstack/glance
         hash: a5b0f4eb81a1f5d8e89713ff7b3ccc6155762628
-  - version: 2012.2.4
+  - version: "2012.2.4"
     projects:
       - repo: openstack/glance
         hash: 3389f067d5a63ef21c5508645d789e6550515e73
