--- a/deliverables/folsom/python-cliff.yaml
+++ b/deliverables/folsom/python-cliff.yaml
@@ -2,59 +2,59 @@
 launchpad: python-cliff
 team: OpenStackClient
 releases:
-  - version: 0.1
+  - version: "0.1"
     projects:
       - repo: openstack/cliff
         hash: 3bcbddb62e698fbe90b96cd97d504c5bee09ba8f
-  - version: 0.2
+  - version: "0.2"
     projects:
       - repo: openstack/cliff
         hash: ba4c717f54aa1cd327cd4d5bd44613b0bfe8efba
-  - version: 0.3
+  - version: "0.3"
     projects:
       - repo: openstack/cliff
         hash: 363bdb87f39c001657e3ea9a9c000ad4755d0f90
-  - version: 0.4
+  - version: "0.4"
     projects:
       - repo: openstack/cliff
         hash: ae9707617d1e29ca84e6f6067e63570a10870130
-  - version: 0.5
+  - version: "0.5"
     projects:
       - repo: openstack/cliff
         hash: f3efefbc542f557d0b7f3f33fecb10a5e7a318b1
-  - version: 0.5.1
+  - version: "0.5.1"
     projects:
       - repo: openstack/cliff
         hash: dfe456fa6b6eadda8ba77fc74ad043e2b3f9d050
-  - version: 0.6
+  - version: "0.6"
     projects:
       - repo: openstack/cliff
         hash: 81e322398d41d63729638e9d795c7bf3c523cb6f
-  - version: 0.7
+  - version: "0.7"
     projects:
       - repo: openstack/cliff
         hash: 012eb872ddc862cb1dffe06944490acba3d9295a
-  - version: 1.0
+  - version: "1.0"
     projects:
       - repo: openstack/cliff
         hash: 83469ad81a27f0b264bd93904b2b172fd889cad9
-  - version: 1.1
+  - version: "1.1"
     projects:
       - repo: openstack/cliff
         hash: fb515c455ed6b7d286a942045d2b07d0ddb5593c
-  - version: 1.1.1
+  - version: "1.1.1"
     projects:
       - repo: openstack/cliff
         hash: b934b9916d3b985dc52e014ab2ece01daff24956
-  - version: 1.1.2
+  - version: "1.1.2"
     projects:
       - repo: openstack/cliff
         hash: 9e778376f76a91277a063e851fa1c1ab1737480c
-  - version: 1.2
+  - version: "1.2"
     projects:
       - repo: openstack/cliff
         hash: 56f377661e23a894571875db2472e26b8761797f
-  - version: 1.2.1
+  - version: "1.2.1"
     projects:
       - repo: openstack/cliff
         hash: a987d403b7ae57c2934d67789f6eaf9324f4383b
