--- a/deliverables/folsom/python-glanceclient.yaml
+++ b/deliverables/folsom/python-glanceclient.yaml
@@ -4,39 +4,39 @@ team: glance
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 0.1.0
+  - version: "0.1.0"
     projects:
       - repo: openstack/python-glanceclient
         hash: 6e1157059efdaed3a0d638efc6b4a1e4db955832
-  - version: 0.1.1
+  - version: "0.1.1"
     projects:
       - repo: openstack/python-glanceclient
         hash: 089d509f350b01c8345cfb7b9b33510a60043861
-  - version: 0.2.0
+  - version: "0.2.0"
     projects:
       - repo: openstack/python-glanceclient
         hash: 5189d58d6363f2f73ef2bd43eb56fd34ea611e28
-  - version: 0.3.0
+  - version: "0.3.0"
     projects:
       - repo: openstack/python-glanceclient
         hash: 18543b1a46cad3e01613c4b5c933b7dfb68e048b
-  - version: 0.4.0
+  - version: "0.4.0"
     projects:
       - repo: openstack/python-glanceclient
         hash: a214d983c2ae115c5c4965808f2bd5912c71e4c3
-  - version: 0.4.1
+  - version: "0.4.1"
     projects:
       - repo: openstack/python-glanceclient
         hash: a5b8165d7de5edd15a616e2ff97c1f8b72b53e8c
-  - version: 0.4.2
+  - version: "0.4.2"
     projects:
       - repo: openstack/python-glanceclient
         hash: d64876424e87b3a7f76a9bf4d29fdacbc5ad4bc4
-  - version: 0.5.0
+  - version: "0.5.0"
     projects:
       - repo: openstack/python-glanceclient
         hash: e233f66ecd0f30523226246bec1c2e62223344ec
-  - version: 0.5.1
+  - version: "0.5.1"
     projects:
       - repo: openstack/python-glanceclient
         hash: 3f67c461da236bf603cf4812f81f51200573f51f
