--- a/deliverables/folsom/python-novaclient.yaml
+++ b/deliverables/folsom/python-novaclient.yaml
@@ -4,27 +4,27 @@ team: nova
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 2.6.0.1
+  - version: "2.6.0.1"
     projects:
       - repo: openstack/python-novaclient
         hash: 49e831a2dbc086035e1ca3a322a87e7decb397d0
-  - version: 2.6.1
+  - version: "2.6.1"
     projects:
       - repo: openstack/python-novaclient
         hash: 3dd0d3be63b4bf35aede852d096deff9be5b63e4
-  - version: 2.6.10
+  - version: "2.6.10"
     projects:
       - repo: openstack/python-novaclient
         hash: a11788515e800a95d5b83448c2a9403eed509bdf
-  - version: 2.7.0
+  - version: "2.7.0"
     projects:
       - repo: openstack/python-novaclient
         hash: c41f5f643af136ccb9cdc40902a6cebfdebaa518
-  - version: 2.8.0
+  - version: "2.8.0"
     projects:
       - repo: openstack/python-novaclient
         hash: dfa1c71e910e624c3983e6db1aab0ec9b085a3cd
-  - version: 2.9.0
+  - version: "2.9.0"
     projects:
       - repo: openstack/python-novaclient
         hash: cdebf729b06d9465ab080fd5b15e433f70f8fe45
