--- a/deliverables/folsom/swift.yaml
+++ b/deliverables/folsom/swift.yaml
@@ -4,23 +4,23 @@ team: swift
 type: service
 release-model: cycle-with-intermediary
 releases:
-  - version: 1.5.0
+  - version: "1.5.0"
     projects:
       - repo: openstack/swift
         hash: b82ce89037b0414338ec4d3a9d29cae4bffe793f
-  - version: 1.6.0
+  - version: "1.6.0"
     projects:
       - repo: openstack/swift
         hash: 874d2ddbcca2ecebae6c878e91fe236cc84005fe
-  - version: 1.7.0
+  - version: "1.7.0"
     projects:
       - repo: openstack/swift
         hash: 51611e91a1413e4a4b901fe31e8c75cb976fc376
-  - version: 1.7.2
+  - version: "1.7.2"
     projects:
       - repo: openstack/swift
         hash: 50d72a1a80712860328b9f9c898ba2e42aba6f88
-  - version: 1.7.4
+  - version: "1.7.4"
     projects:
       - repo: openstack/swift
         hash: 7368af5475be3055b7942acddf8ec5d5696fe2c5
