--- a/deliverables/grizzly/cinder.yaml
+++ b/deliverables/grizzly/cinder.yaml
@@ -4,27 +4,27 @@ team: cinder
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2013.1
+  - version: "2013.1"
     projects:
       - repo: openstack/cinder
         hash: 85b7453f68f76dcd6edd7043026e7a6676eadf23
-  - version: 2013.1.1
+  - version: "2013.1.1"
     projects:
       - repo: openstack/cinder
         hash: a4856c4e3a2a40150fad9257ce489125ca3458f4
-  - version: 2013.1.2
+  - version: "2013.1.2"
     projects:
       - repo: openstack/cinder
         hash: 890dc3fe8d270aed5af271bbbc49b9193db9460b
-  - version: 2013.1.3
+  - version: "2013.1.3"
     projects:
       - repo: openstack/cinder
         hash: 2023eecc4b1a35daf42a64fa01967ed12c7d017b
-  - version: 2013.1.4
+  - version: "2013.1.4"
     projects:
       - repo: openstack/cinder
         hash: 6e764cbf0fd90beb0e2f918903696a57ed198376
-  - version: 2013.1.5
+  - version: "2013.1.5"
     projects:
       - repo: openstack/cinder
         hash: 38885ffc7f9c686ba469b67fbdf4e8548c63a85d
