--- a/deliverables/grizzly/keystone.yaml
+++ b/deliverables/grizzly/keystone.yaml
@@ -4,27 +4,27 @@ team: keystone
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2013.1
+  - version: "2013.1"
     projects:
       - repo: openstack/keystone
         hash: d5dcb3babf57c6393c15f0ffc911fc7a833d58bd
-  - version: 2013.1.1
+  - version: "2013.1.1"
     projects:
       - repo: openstack/keystone
         hash: 678b06a91f772d6be82eb54ed11f27e20f446b57
-  - version: 2013.1.2
+  - version: "2013.1.2"
     projects:
       - repo: openstack/keystone
         hash: 8dd57da1460134461c8cdf75e5cf653b7a84027f
-  - version: 2013.1.3
+  - version: "2013.1.3"
     projects:
       - repo: openstack/keystone
         hash: f60f742a78f3e62017279e8f87353568a70cfc6c
-  - version: 2013.1.4
+  - version: "2013.1.4"
     projects:
       - repo: openstack/keystone
         hash: 9666fc0e14d060afe05e2c2516f0c91aac3f4d15
-  - version: 2013.1.5
+  - version: "2013.1.5"
     projects:
       - repo: openstack/keystone
         hash: a411c944af78c36f2fdb87d305ba452dc52d7ed3
