--- a/deliverables/grizzly/neutron.yaml
+++ b/deliverables/grizzly/neutron.yaml
@@ -4,27 +4,27 @@ team: neutron
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2013.1
+  - version: "2013.1"
     projects:
       - repo: openstack/neutron
         hash: 65393c2c3cbbb142685965ee1f4177e0c2f0893e
-  - version: 2013.1.1
+  - version: "2013.1.1"
     projects:
       - repo: openstack/neutron
         hash: 0602baca8b2b1ee0ee70475d3364afad6b8a1df8
-  - version: 2013.1.2
+  - version: "2013.1.2"
     projects:
       - repo: openstack/neutron
         hash: 4bac39b2b87e69271e00f6ad3870c9fe59a8b5e2
-  - version: 2013.1.3
+  - version: "2013.1.3"
     projects:
       - repo: openstack/neutron
         hash: b606ee1da8b0af34fcadfe10d9ae939926383238
-  - version: 2013.1.4
+  - version: "2013.1.4"
     projects:
       - repo: openstack/neutron
         hash: 1ca02f6ae92461780b8e5f8a79117bbc35a3fbee
-  - version: 2013.1.5
+  - version: "2013.1.5"
     projects:
       - repo: openstack/neutron
         hash: 111a6af48763d8c56049cf0c666f3ddeeef3269e
