--- a/deliverables/grizzly/python-glanceclient.yaml
+++ b/deliverables/grizzly/python-glanceclient.yaml
@@ -4,19 +4,19 @@ team: glance
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 0.6.0
+  - version: "0.6.0"
     projects:
       - repo: openstack/python-glanceclient
         hash: ae16750c48bc8d4b2b8d4de87913572a276f4f1e
-  - version: 0.7.0
+  - version: "0.7.0"
     projects:
       - repo: openstack/python-glanceclient
         hash: c057fe47d6889912b7675aa54102509cd464171a
-  - version: 0.8.0
+  - version: "0.8.0"
     projects:
       - repo: openstack/python-glanceclient
         hash: 51bbf74264b75a0b98bbb8de7611ccc935f49980
-  - version: 0.9.0
+  - version: "0.9.0"
     projects:
       - repo: openstack/python-glanceclient
         hash: 741c15f9633f642aa2e52de10b8eb65d6a8c9ecb
