--- a/deliverables/grizzly/python-keystoneclient.yaml
+++ b/deliverables/grizzly/python-keystoneclient.yaml
@@ -4,19 +4,19 @@ team: keystone
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 0.2.0
+  - version: "0.2.0"
     projects:
       - repo: openstack/python-keystoneclient
         hash: 27f0c721174b149c64cc67ff718d007d94fe79aa
-  - version: 0.2.1
+  - version: "0.2.1"
     projects:
       - repo: openstack/python-keystoneclient
         hash: e7fd4b9b5722d53c18837b44b41b25a323d9b44a
-  - version: 0.2.2
+  - version: "0.2.2"
     projects:
       - repo: openstack/python-keystoneclient
         hash: a5e3638807730e6de9f5b243b13d9e513d93c69b
-  - version: 0.2.3
+  - version: "0.2.3"
     projects:
       - repo: openstack/python-keystoneclient
         hash: b445c19dc6758ff0cfb61780c5d11e95a11f289c
