--- a/deliverables/essex/nova.yaml
+++ b/deliverables/essex/nova.yaml
@@ -4,19 +4,19 @@ team: nova
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2012.1
+  - version: "2012.1"
     projects:
       - repo: openstack/nova
         hash: bbb021c8423c5662290c6a569e6352e2f67e2873
-  - version: 2012.1.1
+  - version: "2012.1.1"
     projects:
       - repo: openstack/nova
         hash: feaeadab934e3d31fd3562014ffd2e44ae6dce34
-  - version: 2012.1.2
+  - version: "2012.1.2"
     projects:
       - repo: openstack/nova
         hash: 6227bc9a1b2534874aa19024ad7d660c2b75197d
-  - version: 2012.1.3
+  - version: "2012.1.3"
     projects:
       - repo: openstack/nova
         hash: b00f759b80a66d5faba212232bde2bcd4cc3cd6c
