--- a/deliverables/essex/python-keystoneclient.yaml
+++ b/deliverables/essex/python-keystoneclient.yaml
@@ -4,7 +4,7 @@ team: keystone
 type: library
 release-model: cycle-with-milestones
 releases:
-  - version: 2012.1
+  - version: "2012.1"
     projects:
       - repo: openstack/python-keystoneclient
         hash: be30e463b08aace10e0e6d595f88f3aa44bb2a14
