--- a/deliverables/folsom/python-keystoneclient.yaml
+++ b/deliverables/folsom/python-keystoneclient.yaml
@@ -4,19 +4,19 @@ team: keystone
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 0.1.0
+  - version: "0.1.0"
     projects:
       - repo: openstack/python-keystoneclient
         hash: 44a1ee32e29825257cac5c0a61fc3be51b79eb65
-  - version: 0.1.1
+  - version: "0.1.1"
     projects:
       - repo: openstack/python-keystoneclient
         hash: 3ed4007e1136c7a0266f51c5b6b98e88997a5f60
-  - version: 0.1.2
+  - version: "0.1.2"
     projects:
       - repo: openstack/python-keystoneclient
         hash: dec8f77c9233f195999b8db9adbd4f026834fd42
-  - version: 0.1.3
+  - version: "0.1.3"
     projects:
       - repo: openstack/python-keystoneclient
         hash: 0a8c96073c3dd76df346c262898303f6fb7435d6
