--- a/deliverables/folsom/python-openstackclient.yaml
+++ b/deliverables/folsom/python-openstackclient.yaml
@@ -4,7 +4,7 @@ team: OpenStackClient
 type: other
 release-model: cycle-with-intermediary
 releases:
-  - version: '0.1'
+  - version: "0.1"
     projects:
       - repo: openstack/python-openstackclient
         hash: 7b768ae5536c0f5d328bd37cdcbd5a485808b957
