--- a/deliverables/grizzly/horizon.yaml
+++ b/deliverables/grizzly/horizon.yaml
@@ -4,27 +4,27 @@ team: horizon
 type: service
 release-model: cycle-with-milestones
 releases:
-  - version: 2013.1
+  - version: "2013.1"
     projects:
       - repo: openstack/horizon
         hash: 14ac6a90f469097647b0e5425b0ecbe244432c06
-  - version: 2013.1.1
+  - version: "2013.1.1"
     projects:
       - repo: openstack/horizon
         hash: e68b7a8e9c3e124526f3572b24ea6fb08c8a52c4
-  - version: 2013.1.2
+  - version: "2013.1.2"
     projects:
       - repo: openstack/horizon
         hash: 7310ef2dae95a6128b7aec1c5ea18b0bb4d8d9ae
-  - version: 2013.1.3
+  - version: "2013.1.3"
     projects:
       - repo: openstack/horizon
         hash: 435d4c8fc2db8d83cb86409742dd58d7b0477fbf
-  - version: 2013.1.4
+  - version: "2013.1.4"
     projects:
       - repo: openstack/horizon
         hash: 3f81d70d4b34ecd02576bd368740ee64f0333357
-  - version: 2013.1.5
+  - version: "2013.1.5"
     projects:
       - repo: openstack/horizon
         hash: 37b208a1a8f0c180ba801e44bf36375fd0af065d
