--- a/deliverables/grizzly/python-cliff.yaml
+++ b/deliverables/grizzly/python-cliff.yaml
@@ -2,15 +2,15 @@
 launchpad: python-cliff
 team: OpenStackClient
 releases:
-  - version: 1.3
+  - version: "1.3"
     projects:
       - repo: openstack/cliff
         hash: 9e1488f0d6a8bbacb428a7606f3622cf5fdac112
-  - version: 1.3.1
+  - version: "1.3.1"
     projects:
       - repo: openstack/cliff
         hash: 48077a3da6c0d7e16c227801c70d6ead8d71fb82
-  - version: 1.3.2
+  - version: "1.3.2"
     projects:
       - repo: openstack/cliff
         hash: df52cc387dbc446350af717ee5a6e83cba351d92
