--- a/deliverables/grizzly/python-swiftclient.yaml
+++ b/deliverables/grizzly/python-swiftclient.yaml
@@ -4,7 +4,7 @@ team: swift
 type: library
 release-model: cycle-with-intermediary
 releases:
-  - version: 1.3.0
+  - version: "1.3.0"
     projects:
       - repo: openstack/python-swiftclient
         hash: bf09dd9573f396d703a0df60a5d5e0bc1d280d1f
