move deliverable schema checking into its own command
We've run into problems because we weren't maintaining older
deliverable files as we extended the schema. This change moves schema
validation out of the main validation command so it runs as a separate
step and processes all deliverable files by default. The more complex
validation rules are still only checked for files being modified in a
given commit.

Change-Id: I4b69ca3c59da6606cf2b27d05c8846223d52998a
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,6 +40,7 @@ console_scripts =
     edit-deliverable = openstack_releases.cmds.edit_deliverable:main
     send-mail = openstack_releases.cmds.mail:main
     release-notes = openstack_releases.cmds.release_notes:main
+    check-schema = openstack_releases.cmds.check_schema:main
 
 [extras]
 sphinxext =
