--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,7 @@ deps =
     yamllint==1.4.1
 commands =
     {toxinidir}/tools/tox-log-command.sh {toxinidir}/tools/run_yamllint.sh
+    {toxinidir}/tools/tox-log-command.sh check-schema {posargs}
     {toxinidir}/tools/tox-log-command.sh validate-request {posargs}
 
 [testenv:list-changes]
