mark python-ceilometerclient retired
Change-Id: Iff7fd11e190e795778a50dc98819c0c09a5cb64e
Signed-off-by: Doug Hellmann <doug@doughellmann.com>

--- a/deliverables/kilo/python-ceilometerclient.yaml
+++ b/deliverables/kilo/python-ceilometerclient.yaml
@@ -26,3 +26,7 @@ releases:
     projects:
       - repo: openstack/python-ceilometerclient
         hash: 44c2a21adcfb3092d5e66706612fe14ec2282717
+repository-settings:
+  openstack/python-ceilometerclient:
+    flags:
+      - retired
