--- a/deliverables/liberty/python-ceilometerclient.yaml
+++ b/deliverables/liberty/python-ceilometerclient.yaml
@@ -32,3 +32,7 @@ releases:
     projects:
       - repo: openstack/python-ceilometerclient
         hash: 7da82f4436a45336aef10b24c53f6f1e03eea42e
+repository-settings:
+  openstack/python-ceilometerclient:
+    flags:
+      - retired
