--- a/deliverables/mitaka/python-ceilometerclient.yaml
+++ b/deliverables/mitaka/python-ceilometerclient.yaml
@@ -39,3 +39,7 @@ releases:
     projects:
       - repo: openstack/python-ceilometerclient
         hash: 88f07e0154291d58c3f1237bebbbe53b18fb9daf
+repository-settings:
+  openstack/python-ceilometerclient:
+    flags:
+      - retired
