--- a/deliverables/queens/vitrage-dashboard.yaml
+++ b/deliverables/queens/vitrage-dashboard.yaml
@@ -17,6 +17,10 @@ releases:
     projects:
       - repo: openstack/vitrage-dashboard
         hash: 3df18819d90ed3910b383493c8a0cc9c4b4ee7e6
+  - version: 1.4.2
+    projects:
+      - repo: openstack/vitrage-dashboard
+        hash: 4bf37570524ecf128635e5a471fd992bcea35c71
 repository-settings:
   openstack/vitrage-dashboard: {}
 release-notes: https://docs.openstack.org/releasenotes/vitrage-dashboard/queens.html
