--- a/deliverables/queens/vitrage.yaml
+++ b/deliverables/queens/vitrage.yaml
@@ -20,6 +20,10 @@ releases:
     projects:
       - repo: openstack/vitrage
         hash: f14977e8a28753917e48b98ac5d6ab5263e7aa96
+  - version: 2.2.0
+    projects:
+      - repo: openstack/vitrage
+        hash: 1537886924cd6fe7c5bf9b4b82a0c287c6b08cfa
 repository-settings:
   openstack/vitrage: {}
 release-notes: https://docs.openstack.org/releasenotes/vitrage/queens.html
