--- a/deliverables/_independent/puppet-pacemaker.yaml
+++ b/deliverables/_independent/puppet-pacemaker.yaml
@@ -18,3 +18,9 @@ releases:
     projects:
       - repo: openstack/puppet-pacemaker
         hash: b21823aa86f80511b63fdd59533b7a7077c8ac56
+  - version: 0.7.1
+    projects:
+      - repo: openstack/puppet-pacemaker
+        hash: e136cf4c65c0eade3734a90b7ec0a8bb09a85e76
+repository-settings:
+  openstack/puppet-pacemaker: {}
