--- a/deliverables/queens/cinder.yaml
+++ b/deliverables/queens/cinder.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: b8a5ff5d7e2db680ba896c6c16753735c5cd6729
         repo: openstack/cinder
     version: 12.0.0.0rc1
+  - projects:
+      - hash: ca9bf2d1c56605a565ffc468bb91fb5d58ef5ce9
+        repo: openstack/cinder
+    version: 12.0.0.0rc2
 cycle-highlights:
   - 'Support for attaching a single Cinder volume to multile VM instances.'
   - 'Add ability to report backend state in service list.'
