--- a/deliverables/queens/keystone.yaml
+++ b/deliverables/queens/keystone.yaml
@@ -23,6 +23,10 @@ releases:
     projects:
       - repo: openstack/keystone
         hash: 30afb87247b6f6b7afbe431139e3471a2739aa1a
+  - version: 13.0.0.0rc2
+    projects:
+      - repo: openstack/keystone
+        hash: 847676854572e0c36535048b731f966590adb746
 cycle-highlights:
   - |
     Keystone now offers a better story for applications interacting with
