--- a/deliverables/queens/manila.yaml
+++ b/deliverables/queens/manila.yaml
@@ -24,6 +24,10 @@ releases:
       - hash: 4a40da15fe0e9688c363371fd998ef7c3ba321ee
         repo: openstack/manila
     version: 6.0.0.0rc2
+  - projects:
+      - hash: be8580b350c34c91494cb553eb15e6b61ef250b7
+        repo: openstack/manila
+    version: 6.0.0.0rc3
 cycle-highlights:
   - |
     Added drivers for Infinidat, MapR-FS, and Veritas
