--- a/deliverables/queens/murano.yaml
+++ b/deliverables/queens/murano.yaml
@@ -20,6 +20,10 @@ releases:
     projects:
       - repo: openstack/murano
         hash: 6339730c5509f8f1ee2f4aa9e09573687d6e96ca
+  - version: 5.0.0.0rc2
+    projects:
+      - repo: openstack/murano
+        hash: de3b3e9d32539a0c29141da3a92e561852bf1656
 repository-settings:
   openstack/murano: {}
 branches:
