--- a/deliverables/queens/glance.yaml
+++ b/deliverables/queens/glance.yaml
@@ -35,6 +35,10 @@ releases:
     projects:
       - repo: openstack/glance
         hash: da47f42ff7f578206c922abc221912a20c7c5e93
+  - version: 16.0.0.0rc3
+    projects:
+      - repo: openstack/glance
+        hash: ceb8b9a67dd3d714ec5b876df56e03f001ad6ae6
 repository-settings:
   openstack/glance: {}
 release-notes: https://docs.openstack.org/releasenotes/glance/queens.html
