--- a/deliverables/queens/murano-dashboard.yaml
+++ b/deliverables/queens/murano-dashboard.yaml
@@ -21,6 +21,10 @@ releases:
     projects:
       - repo: openstack/murano-dashboard
         hash: 973b898cac5d831f06470dd1cc2a421fce06585b
+  - version: 5.0.0.0rc2
+    projects:
+      - repo: openstack/murano-dashboard
+        hash: 75b3caa722231a4a9b386e53145e260679cf5c78
 repository-settings:
   openstack/murano-dashboard: {}
 branches:
