--- a/deliverables/queens/neutron-fwaas-dashboard.yaml
+++ b/deliverables/queens/neutron-fwaas-dashboard.yaml
@@ -12,6 +12,10 @@ releases:
       - hash: e467da55dd9a49eb794c6ef0e2d51c6993dfdb11
         repo: openstack/neutron-fwaas-dashboard
     version: 1.2.0
+  - projects:
+      - hash: 07c6897daec96cc29c6add44f3a46886a74978b8
+        repo: openstack/neutron-fwaas-dashboard
+    version: 1.3.0
 branches:
   - name: stable/queens
     location: 1.2.0
