--- a/deliverables/queens/neutron-vpnaas-dashboard.yaml
+++ b/deliverables/queens/neutron-vpnaas-dashboard.yaml
@@ -13,6 +13,10 @@ releases:
       - hash: bd1354fc783a24504cd9651a5aeb6cad24ee34a8
         repo: openstack/neutron-vpnaas-dashboard
     version: 1.2.1
+  - projects:
+      - hash: c0daa32fc602a974bf966b714c9d48eee3d0224b
+        repo: openstack/neutron-vpnaas-dashboard
+    version: 1.2.2
 branches:
   - location: 1.2.1
     name: stable/queens
