--- a/deliverables/queens/tripleo-ipsec.yaml
+++ b/deliverables/queens/tripleo-ipsec.yaml
@@ -13,5 +13,9 @@ releases:
       - hash: 00df8e1adb939d357805eadefaf54f4f326ee21f
         repo: openstack/tripleo-ipsec
     version: 8.0.1
+  - projects:
+      - hash: 00e9224b7e1425ef5f93074ee88e1543930cbe7e
+        repo: openstack/tripleo-ipsec
+    version: 8.0.2
 repository-settings:
   openstack/tripleo-ipsec: {}
