--- a/deliverables/_independent/puppet-ceph.yaml
+++ b/deliverables/_independent/puppet-ceph.yaml
@@ -23,5 +23,9 @@ releases:
       - hash: da96ae79cd581841af35a5e0b31426d6a7974af9
         repo: openstack/puppet-ceph
     version: 2.4.2
+  - projects:
+      - hash: 5d490bbeef2eb4a172f42865d853ea7ffa24c154
+        repo: openstack/puppet-ceph
+    version: 2.5.0
 repository-settings:
   openstack/puppet-ceph: {}
