--- a/deliverables/queens/monasca-ui.yaml
+++ b/deliverables/queens/monasca-ui.yaml
@@ -20,6 +20,10 @@ releases:
       - hash: d58f0f66f319eacbc3e97d806d0a6d263ece9907
         repo: openstack/monasca-ui
     version: 1.12.0
+  - projects:
+      - hash: e2a1ce1575cf2919f605abdcc852ded0e6b1ee17
+        repo: openstack/monasca-ui
+    version: 1.12.1
 branches:
   - location: 1.12.0
     name: stable/queens
