--- a/deliverables/queens/ironic.yaml
+++ b/deliverables/queens/ironic.yaml
@@ -16,6 +16,10 @@ releases:
       - hash: a0e08d026badbb81dd956c1999176cc2be4f9220
         repo: openstack/ironic
     version: 10.1.0
+  - projects:
+      - hash: 46828a2a509c9836684f0c5b7f8699fbe04c32cc
+        repo: openstack/ironic
+    version: 10.1.1
 branches:
   - location: 10.1.0
     name: stable/queens
