--- a/deliverables/_independent/virtualbmc.yaml
+++ b/deliverables/_independent/virtualbmc.yaml
@@ -19,5 +19,9 @@ releases:
     projects:
       - repo: openstack/virtualbmc
         hash: 88588769a47ce1c0836bfdcb26729a263c30f8d9
+  - projects:
+      - hash: 427de49c25e3506fb8209b49749c03460053e8a7
+        repo: openstack/virtualbmc
+    version: 1.3.0
 repository-settings:
   openstack/virtualbmc: {}
