--- a/deliverables/_independent/sushy-tools.yaml
+++ b/deliverables/_independent/sushy-tools.yaml
@@ -11,5 +11,9 @@ releases:
     projects:
       - repo: openstack/sushy-tools
         hash: ec39c99fa1741aec5165f1da71a17799acea9ac5
+  - projects:
+      - hash: bb23d5bc304124ae04495fffed5ecf9e113eb37d
+        repo: openstack/sushy-tools
+    version: 0.3.0
 repository-settings:
   openstack/sushy-tools: {}
