--- a/deliverables/queens/congress.yaml
+++ b/deliverables/queens/congress.yaml
@@ -20,6 +20,10 @@ releases:
     projects:
       - repo: openstack/congress
         hash: b15aa16c7f3042a50aa506822867d5c36738e545
+  - version: 7.0.0.0rc2
+    projects:
+      - repo: openstack/congress
+        hash: f26f54774f598fa41d6fb0b8b01054330b5aee31
 repository-settings:
   openstack/congress: {}
 branches:
