sahara-tests: release 0.6.0
Queens support, dropping Newton, and other smaller internal changes.

Change-Id: Ie3b1185134b9feaf5e8aef098ad8eb570f149352

--- a/deliverables/_independent/sahara-tests.yaml
+++ b/deliverables/_independent/sahara-tests.yaml
@@ -28,5 +28,9 @@ releases:
     projects:
       - repo: openstack/sahara-tests
         hash: e638bcc351b74fab5a3be6b89f5d9b8e172cbd92
+  - version: 0.6.0
+    projects:
+      - repo: openstack/sahara-tests
+        hash: 415421f2c2b9037e25f47e807ee70930178e1b01
 repository-settings:
   openstack/sahara-tests: {}
