--- a/deliverables/queens/magnum.yaml
+++ b/deliverables/queens/magnum.yaml
@@ -12,6 +12,10 @@ releases:
       - hash: 710192a63fd36186e9669cc2ac00dca2cc4fcc81
         repo: openstack/magnum
     version: 6.0.1
+  - projects:
+      - hash: dd1a2aa3c8e252fcd476520b113403e2fab4d391
+        repo: openstack/magnum
+    version: 6.1.0
 branches:
   - name: stable/queens
     location: 6.0.0
