--- a/deliverables/queens/heat.yaml
+++ b/deliverables/queens/heat.yaml
@@ -23,6 +23,10 @@ releases:
     projects:
       - repo: openstack/heat
         hash: 98636290c5a4ed9c7d608a1944124b5d92678107
+  - version: 10.0.0.0rc2
+    projects:
+      - repo: openstack/heat
+        hash: 43f122be13736f15fbc38cb6e6ce29545f784c86
 repository-settings:
   openstack/heat: {}
 release-notes: https://docs.openstack.org/releasenotes/heat/queens.html
